# Game-of-life

./: Animal.cpp  Animal.h  Antelope.cpp  CMakeLists.txt  Dandelion.cpp  Fox.cpp  Gameplay.cpp  Gameplay.h  Grass.cpp  Guarana.cpp  Human.cpp  Human.h  Instructions.txt  Nightshade.cpp  Organism.cpp  Organism.h  PineBorscht.cpp  Plant.cpp  Plant.h  Point.cpp  Point.h  SaveManager.cpp  Sheep.cpp  Sheep.h  TasksForLater.txt  Turtle.cpp  Wolf.cpp  Wolf.h  World.cpp  World.h  game_of_life.cpp  save.json
game-of-life-cpp/: Animal.cpp  Antelope.cpp  Dandelion.cpp  Fox.cpp  Gameplay.cpp  Human.cpp  Instructions.txt  Nightshade.cpp  Sheep.cpp  Turtle.cpp  World.cpp  save.json
game-of-life-cpp/include/: Dandelion.h  Fox.h  Guarana.h  Organism.h  PineBorscht.h  SaveManager.h  Wolf.h  World.h
game-of-life-java/save/: world.sav
game-of-life-java/src/: Animal.java  Antelope.java  Dandelion.java  Fox.java  Gameplay.java  Grass.java  Guarana.java  Hogweed.java  Human.java  Nightshade.java  Organism.java  Plant.java  Sheep.java  Turtle.java  Window.java  Wolf.java  World.java  WorldFileManager.java  game_of_life.java
game-of-life-java/src/lib/: Size.java
include/: Animal.h  Antelope.h  Dandelion.h  Fox.h  Gameplay.h  Grass.h  Guarana.h  Human.h  Nightshade.h  Organism.h  Plant.h  Point.h  SaveManager.h  Sheep.h  Turtle.h  Wolf.h  World.h
